fixed images not showing

--- a/css/style.css
+++ b/css/style.css
@@ -37,12 +37,14 @@ h1 {
 	width: 50%;
 	height: auto;
 	margin: 0px auto;
-	padding: 60px 60px 110px 60px;
+	padding: 60px 60px 120px 60px;
+	position: relative;
 }
 
 #poseContainer {
 	float: left;
-	margin: 0px 60px 150px 0px;
+	margin: 0 60px 100px 0px;
+	height: 100%;
 }
 
 #questionContainer {
@@ -121,7 +123,7 @@ ul {
 	font-size: 1.2em;
 	color: #7a8370;
 	line-height: 1.6em;
-	margin-top: 15px;
+	margin-top: 20px;
 }
 
 
